regression/fail/escaping-datatype.sml
val _ =
   let
      datatype t = T
   in
      (T, fn T => 1)
   end
